# tmsai

./: .replit  cleanup_http_client.py  install_vanna.py  package-lock.json  package.json  pyproject.toml
client/src/: App.tsx  index.css
client/src/components/layout/: header.tsx  sidebar.tsx
client/src/components/query/: example-queries.tsx  query-input.tsx  sql-display.tsx  vanna-query.tsx
client/src/components/results/: data-table.tsx  query-explanation.tsx  visualization.tsx
client/src/components/ui/: code-block.tsx
client/src/hooks/: use-query.tsx  use-vanna-query.tsx
client/src/lib/: flask-service.ts
client/src/pages/: dashboard.tsx  database-schema.tsx  query-history.tsx  saved-queries.tsx  settings.tsx  training-data.tsx
db/: northwind-seed.ts  seed.ts
scripts/: setup_northwind_db.py
server/: routes.ts  storage.ts  vanna-service.ts
server/flask/: .env  app.py  requirements.txt
server/flask/modules/: __init__.py  cache.py  clients.py  clients_fixed.py  config.py  data.py  northwind_db.py  routes.py  training.py  vanna_client.py
server/flask/static/: index.html
shared/: northwind-schema.ts  schema.ts
