[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-cors>=5.0.1",
    "flask>=3.1.0",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.40",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "chromadb>=1.0.7",
    "pip>=25.1",
    "pydantic>=2.11.4",
    "numpy>=2.2.5",
    "openai>=1.76.2",
    "psycopg>=3.2.7",
]
